# ariesql

./: .env.example  .gitignore  Dockerfile.migrator  README.md  database_context.json  database_context.md  docker-compose.yaml  main.py  pyproject.toml
.devin/: wiki.json
.notebooks/: auto_correctors.ipynb  guardrail.ipynb  query_masker.ipynb  sql_query_validator.ipynb
configs/: database_manifest.mssql.example.json
docs/: SECURITY_AUDIT_REPORT.md  qa.txt
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/v1/chat/stream/: route.ts
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  MarkdownRenderer.tsx  Providers.tsx  SubEventTimeline.tsx
frontend/src/hooks/: useChat.ts
frontend/src/theme/: theme.ts
frontend/src/types/: sse.ts
output/: events.jsonl
scripts/: init-employees.sh  set-search-path.sql
scripts/mssql/: create-employees-schema.sql  init-mssql.sh  migrate-pg-to-mssql.sh
src/ariesql/: _types.py  agent.py  config.py  container.py  context_loader.py  guardrails_config.json  logger.py  main.py  sql_cache.py  sql_masker.py  validator.py
src/ariesql/api/: __init__.py  chat.py  schemas.py
src/ariesql/tools/: data_analysis_utils.py  sql_query_tools.py
tests/: sql_agent_test.py  test_security_audit.py  test_validator.py
